# wad-app-py-wad-program

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: cd-deploy-prep.yml  ci.yml  push-to-coding-branch.yml  push-to-dev-main.yml  push-to-tag.yml
src/wad_app_py_wad_program/: cli_builders.py  cli_filters.py  console_visitor.py  database.py  database_specifications.py  exceptions.py  filter_specifications.py  filters.py  html_program_retriever.py  json_database.py  main.py  model.py  page_loader.py  program_retriever.py  wad_program_app.py
src/wad_program/: __init__.py  __main__.py  console_visitor.py  database_specifications.py  filter_specifications.py  filters.py  html_program_retriever.py  main.py  page_loader.py  wad_program_app.py
tests/: test_html_program_retriever.py
tests/test_data/: 5-things-in-tech-that-matter-now-2026-edition-1260805.html  cuda-python-gpu-programming-for-the-modern-developer-1246897.html  design-patterns-for-ai-products-in-2026-1150609.html  how-to-read-code-properly-1085275.html  introducing-json-structure-1119688.html  keynote-1244226.html  program_page.html  you-will-migrate-eventually-a-developer-approach-to-technology-adoption-1154249.html
