[project]
name = "wad-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Daryl Stark", email = "daryl@dstark.nl" }]
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "typer>=0.26.7",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-sugar>=1.1.1",
    "ruff>=0.15.19",
    "ty>=0.0.53",
    "types-requests>=2.33.0.20260518",
]

[project.scripts]
wad-program = "wad_program:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
exclude = ["docs/*.py"]
select = [
    "E",   # pycodestyle (errors)
    "W",   # pycodestyle (warnings)
    "PL",  # pylint
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "LOG", # flake8-logging
    "Q",   # flake8-quotes
    "ANN", # flak8-annotations
    "ICN", # flake8-import-conventions
    "SLF", # flake8-self
    "TD",  # flake8-todo
    "FIX", # flake8-fixme
    "D",   # pydocstyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "I",   # isort
    "N",   # pep8-naming
]
ignore = [
    "B008",    # function call in default argument
    "PLR2004", # magic value used in comparison
    "TD003",   # missing link
    "TD002",   # missing author
    "PLR0913", # too many arguments
    "FIX002",  # fixme found - skipped for now
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = 'single'
multiline-quotes = 'double'

[tool.ruff.format]
quote-style = 'single'
indent-style = 'space'
docstring-code-format = true
exclude = ["docs/*.py"]

[tool.pytest.ini_options]
addopts = [
    '--cov=wad_app_py_wad_program',
    '--cov-report=html',
    '--cov-report=lcov',
    '--cov-context=test',
    '--cov-branch',
]
testpaths = ['tests']
